# zig_seL4_wrapper

./: CMakeLists.txt
include/: libsel4_zig_wrapper.h
src/: libsel4_zig_wrapper.c
